@@ -6,6 +6,7 @@ xxxx/xx/xx
  - #5688, [topology] topology building functions now interpret tolerance 0
           (old default) to really mean 0 and want -1 (new default) to mean
           "use topology precision" (Sandro Santilli)
+ - #6024, Remove support for PostgreSQL 12 and 13 (Regina Obe)
 
 
 * New Features *
